fix : login and register layouts
-creation of login and register layouts

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.apollographql.apollo'
 }
+
+apollo {
+    packageName.set("com.coreict.models")
+}
+
 
 android {
     compileSdk 32
@@ -47,4 +53,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.apollographql.apollo:apollo-runtime:2.5.11'
+    implementation 'com.apollographql.apollo:apollo-android-support:2.5.11'
 }
