--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
                 android:name=".ui.RegisterActivity"
                 android:exported="true"
                 android:theme="@style/AppTheme.NoActionBarSplash">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
                 android:name=".ui.LoginActivity"
@@ -40,12 +40,12 @@
                 android:label="@string/app_name"
                 android:theme="@style/Theme.Voting.NoActionBar">
 
-            <!--
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            -->
+
         </activity>
     </application>
 
